--- a/TrashCollector/Views/Customers/Delete.cshtml
+++ b/TrashCollector/Views/Customers/Delete.cshtml
@@ -1,88 +1,72 @@
 ﻿@model TrashCollector.Models.Customer
 
 @{
-    
+    ViewBag.Title = "Delete";
 }
 
-<!DOCTYPE html>
+<h2>Delete</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>Customer</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.UserName)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.UserName)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.UserPassword)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.UserPassword)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.CustomerDay)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.CustomerDay)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.CustomerDay)
-            </dt>
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Customer</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.UserName)
+        </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.CustomerDay)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.UserName)
+        </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.StreetName)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.UserPassword)
+        </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.StreetName)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.UserPassword)
+        </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.City)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.CustomerDay)
+        </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.City)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.CustomerDay)
+        </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Zip)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.StreetName)
+        </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Zip)
-            </dd>
-    
-        </dl>
-    
-        @using (Html.BeginForm()) {
-            @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
-            </div>
-        }
-    </div>
-</body>
-</html>
+        <dd>
+            @Html.DisplayFor(model => model.StreetName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.City)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.City)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Zip)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Zip)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
