--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -1,74 +1,66 @@
 ﻿@model TrashCollector.Models.Customer
 
 @{
-    
+    ViewBag.Title = "Details";
 }
 
-<!DOCTYPE html>
+<h2>Details</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <div>
-        <h4>Customer</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.UserName)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.UserName)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.UserPassword)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.UserPassword)
-            </dd>  
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.CustomerDay)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.CustomerDay)
-            </dd>
+<div>
+    <h4>Customer</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.UserName)
+        </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.StreetName)
-            </dt>
+        <dd>
+            @Html.DisplayFor(model => model.UserName)
+        </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.StreetName)
-            </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.UserPassword)
+        </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.City)
-            </dt>
+        <dd>
+            @Html.DisplayFor(model => model.UserPassword)
+        </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.City)
-            </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CustomerDay)
+        </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Zip)
-            </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CustomerDay)
+        </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Zip)
-            </dd>
-    
-        </dl>
-    </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.CustomerId }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-</body>
-</html>
+        <dt>
+            @Html.DisplayNameFor(model => model.StreetName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StreetName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.City)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.City)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Zip)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Zip)
+        </dd>
+
+    </dl>
+</div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.CustomerId }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
