--- a/TrashCollector/Views/Customers/Create.cshtml
+++ b/TrashCollector/Views/Customers/Create.cshtml
@@ -31,10 +31,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CustomerDay, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DayOfTheWeek, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CustomerDay, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CustomerDay, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.DayOfTheWeek, new SelectList(Model.DayOfTheWeek, "DayOfTheWeek", "Name"), "", new { @class = "form-control" } )})
+                @Html.ValidationMessageFor(model => model.DayOfTheWeek, "", new { @class = "text-danger" })))
             </div>
         </div>
 
